--- a/baitest.html
+++ b/baitest.html
@@ -19,7 +19,7 @@
     </head>
     <body>
         <h1> Anh Trung <span style="color: red;"> có đẳng cấp không</span></h1>
-        <p> <span style="color: blue;"> anh Trung có đẹp trai không </span></p>
+        <p> <span style="color: blue;"> anh Trung có đẹp trai không? qua la dep trai nha</span></p>
         <img src="C:\Users\Tran Trung\Pictures\z4373181618213_0492179057abd132a1eecbc90b903494.jpg" alt="logo" width="150" height="230">
         <script>
             deptrai();
